--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "pinia": "^2.2.6",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
