--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "autoprefixer": "^10.4.20",
     "pinia": "^2.2.6",
     "postcss": "^8.4.49",
